--- a/elementary/pom.xml
+++ b/elementary/pom.xml
@@ -7,11 +7,11 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     
-    <artifactId>satisfactory</artifactId>
+    <artifactId>elementary</artifactId>
     <packaging>jar</packaging>
     
-    <name>Satisfactory</name>
-    <description>Satisfactory is a Element matching library for annotation processors. It also contains classes to simplify annotation processing.</description>
+    <name>Elementary</name>
+    <description>Elementary is a library to simplify annotation processing, and test Javac and annotation processing</description>
     
     <properties>
         <maven.compiler.release>11</maven.compiler.release>
@@ -23,14 +23,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <release>${release}</release>
-                    <annotationProcessorPaths>
-                        <path>
-                            <groupId>com.google.auto.service</groupId>
-                            <artifactId>auto-service</artifactId>
-                            <version>1.0-rc6</version>
-                        </path>
-                    </annotationProcessorPaths>
+                    <release>11</release>
                 </configuration>
             </plugin>
             
