--- a/elementary-core/pom.xml
+++ b/elementary-core/pom.xml
@@ -7,10 +7,10 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     
-    <artifactId>elementary</artifactId>
+    <artifactId>elementary-core</artifactId>
     <packaging>jar</packaging>
     
-    <name>Elementary</name>
+    <name>Elementary Core</name>
     <description>Elementary is a library to simplify annotation processing, and test Javac and annotation processing</description>
     
     <properties>
