--- a/elementary-core/pom.xml
+++ b/elementary-core/pom.xml
@@ -23,7 +23,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <release>11</release>
+                    <release>${release}</release>
                 </configuration>
             </plugin>
             
