--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <release>11</release>
     </properties>
     
     <distributionManagement>
