--- a/utilitary/pom.xml
+++ b/utilitary/pom.xml
@@ -6,33 +6,15 @@
         <artifactId>elementary</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    
-    <artifactId>satisfactory</artifactId>
+    <artifactId>utilitary</artifactId>
     <packaging>jar</packaging>
-    
-    <name>Satisfactory</name>
-    <description>Satisfactory is a Element matching library for annotation processors.</description>
+    <name>Utilitary</name>
+    <description>Utilitary contains classes to simplify annotation processing.</description>
     
     <properties>
         <maven.compiler.release>11</maven.compiler.release>
     </properties>
-    
-    <dependencies>
-        <dependency>
-            <groupId>com.karuslabs</groupId>
-            <artifactId>utilitary</artifactId>
-            <version>${project.version}</version>
-            <scope>compile</scope>
-        </dependency>
-        
-        <dependency>
-            <groupId>com.karuslabs</groupId>
-            <artifactId>elementary-core</artifactId>
-            <version>${project.version}</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
-    
+
     <build>
         <plugins>  
             <plugin>
@@ -55,6 +37,14 @@
                 <version>3.2.4</version>
                 <configuration>
                     <minimizeJar>true</minimizeJar>
+                    <filters>
+                        <filter>
+                            <artifact>utilitary:utilitary</artifact>
+                            <includes>
+                                <include>**</include>
+                            </includes>
+                        </filter>
+                    </filters>
                     <shadedArtifactAttached>true</shadedArtifactAttached>
                     <transformers>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
