--- a/elementary-core/pom.xml
+++ b/elementary-core/pom.xml
@@ -32,6 +32,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
+                    <trimStackTrace>false</trimStackTrace>
                     <release>${release}</release>
                 </configuration>
             </plugin>
