--- a/elementary-core/pom.xml
+++ b/elementary-core/pom.xml
@@ -10,7 +10,7 @@
     <artifactId>elementary-core</artifactId>
     <packaging>jar</packaging>
     
-    <name>Elementary Core</name>
+    <name>Elementary</name>
     <description>Elementary is a library to simplify annotation processing, and test Javac and annotation processing</description>
     
     <properties>
@@ -24,6 +24,22 @@
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
+        
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.7.0</version>
+            <scope>compile</scope>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-commons</artifactId>
+            <version>1.7.0</version>
+            <scope>compile</scope>
+        </dependency>
+
+
     </dependencies>
     
     <build>
