--- a/satisfactory/pom.xml
+++ b/satisfactory/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.karuslabs</groupId>
-        <artifactId>elementary</artifactId>
+        <artifactId>elementary-project</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     
