--- a/elementary/pom.xml
+++ b/elementary/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     
     <name>Elementary</name>
-    <description>Elementary is a JUnit testing tool for Javac and annotation processors</description>
+    <description>Elementary is a suite of JUnit 5 extensions for testing Java compilation and annotation processors</description>
     
     <properties>
         <maven.compiler.release>11</maven.compiler.release>
@@ -30,13 +30,6 @@
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.7.1</version>
             <scope>compile</scope>
-        </dependency>
-        
-        <dependency>
-            <groupId>com.google.auto.service</groupId>
-            <artifactId>auto-service</artifactId>
-            <version>1.0-rc7</version>
-            <scope>test</scope>
         </dependency>
     </dependencies>
     
