--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
             <id>karus</id>
             <url>https://repo.karuslabs.com/repository/elementary-snapshots</url>
         </snapshotRepository>
+        
+        <site>
+            <id>karus</id>
+            <url>dav:https://repo.karuslabs.com/repository/elementary/${project.version}/</url>
+        </site>
     </distributionManagement>
     
     <repositories>
@@ -155,6 +160,58 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            
+            <plugin> 
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <docfilessubdirs>true</docfilessubdirs>
+                    <additionalOptions>-html5</additionalOptions>
+                    <links>
+                        <link>https://checkerframework.org/api/</link>
+                        <link>https://junit.org/junit5/docs/current/api/</link>
+                    </links>
+                </configuration>
+                <executions> 
+                    <execution>
+                        <phase>deploy</phase>
+                        <goals>
+                            <goal>javadoc</goal>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions> 
+            </plugin>
+            
+            <plugin> 
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId> 
+                <version>2.8.2</version>
+                <executions> 
+                    <execution>
+                        <goals>
+                            <goal>deploy</goal>
+                        </goals> 
+                    </execution> 
+                </executions> 
+            </plugin>
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.9.1</version>
+                <configuration>
+                    <inputDirectory>${project.basedir/target/site/apidocs/}</inputDirectory>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.wagon</groupId>
+                        <artifactId>wagon-webdav-jackrabbit</artifactId>
+                        <version>3.4.1</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
