--- a/.github/workflows/stable.yml
+++ b/.github/workflows/stable.yml
@@ -3,14 +3,14 @@ name: Elementary CI/CD
 on:
   push:
     branches:
-      - master
+      - stable
 
 env:
   SONATYPE_USERNAME: ${{secrets.SONATYPE_USERNAME}}
   SONATYPE_PASSWORD: ${{secrets.SONATYPE_PASSWORD}}
 
 jobs:
-  deploy:
+  stable:
     runs-on: ubuntu-20.04
     steps:
       - uses: styfle/cancel-workflow-action@0.4.1
@@ -20,5 +20,5 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: 11
-      - run: mvn deploy -Dhttps.protocols=TLSv1.2 --settings ci-settings.xml --no-transfer-progress
+      - run: mvn deploy site staging-deloy site-deploy -Dhttps.protocols=TLSv1.2 -D maven.wagon.http.ssl.insecure=true -D maven.wagon.http.ssl.allowall=true --settings ci-settings.xml --no-transfer-progress
       - run: bash <(curl -s https://codecov.io/bash)
