--- a/.github/workflows/stable.yml
+++ b/.github/workflows/stable.yml
@@ -20,5 +20,5 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: 11
-      - run: mvn deploy site deploy:staging-deloy site-deploy -Drepository-head=latest -Dhttps.protocols=TLSv1.2 -D maven.wagon.http.ssl.insecure=true -D maven.wagon.http.ssl.allowall=true --settings ci-settings.xml --no-transfer-progress
+      - run: mvn deploy site:staging-deloy site-deploy -Drepository-head=latest -Dhttps.protocols=TLSv1.2 -D maven.wagon.http.ssl.insecure=true -D maven.wagon.http.ssl.allowall=true --settings ci-settings.xml --no-transfer-progress
       - run: bash <(curl -s https://codecov.io/bash)
