--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -23,5 +23,5 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: 11
-      - run: mvn deploy site:stage-deploy site-deploy -Drepository-head=nightly -Dhttps.protocols=TLSv1.2 -D maven.wagon.http.ssl.insecure=true -D maven.wagon.http.ssl.allowall=true --settings ci-settings.xml --no-transfer-progress
+      - run: mvn deploy site site:stage-deploy site-deploy -Drepository-head=nightly -Dhttps.protocols=TLSv1.2 -D maven.wagon.http.ssl.insecure=true -D maven.wagon.http.ssl.allowall=true --settings ci-settings.xml --no-transfer-progress
       - run: bash <(curl -s https://codecov.io/bash)
