--- a/elementary/pom.xml
+++ b/elementary/pom.xml
@@ -70,7 +70,7 @@
 
         <plugin>
             <artifactId>maven-surefire-plugin</artifactId>
-            <version>3.0.0-M5</version>
+            <version>2.22.0</version>
             <configuration>
                 <trimStackTrace>false</trimStackTrace>
             </configuration>
