--- a/satisfactory/pom.xml
+++ b/satisfactory/pom.xml
@@ -22,6 +22,13 @@
         </dependency>
         
         <dependency>
+            <groupId>org.jgrapht</groupId>
+            <artifactId>jgrapht-core</artifactId>
+            <version>1.5.1</version>
+            <scope>compile</scope>
+        </dependency>
+        
+        <dependency>
             <groupId>com.karuslabs</groupId>
             <artifactId>elementary</artifactId>
             <version>${project.version}</version>
