--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,5 +17,6 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           java-version: 17
+          distribution: temurin
       - run: mvn install --settings ci-settings.xml --no-transfer-progress
       - run: bash <(curl -s https://codecov.io/bash)
