--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     
     <groupId>com.karuslabs</groupId>
     <artifactId>elementary-project</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.1.2</version>
     <packaging>pom</packaging>
     
     <name>Elementary Project</name>
