--- a/satisfactory/pom.xml
+++ b/satisfactory/pom.xml
@@ -4,10 +4,11 @@
     <parent>
         <groupId>com.karuslabs</groupId>
         <artifactId>elementary-project</artifactId>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.1.2</version>
     </parent>
     
     <artifactId>satisfactory</artifactId>
+    <version>2.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     
     <name>Satisfactory</name>
