--- a/utilitary-itest/pom.xml
+++ b/utilitary-itest/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>elementary-project</artifactId>
         <groupId>com.karuslabs</groupId>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.1.2</version>
     </parent>
     <artifactId>utilitary-itest</artifactId>
     <packaging>jar</packaging>
