--- a/satisfactory/pom.xml
+++ b/satisfactory/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>com.karuslabs</groupId>
             <artifactId>utilitary</artifactId>
-            <version>${project.version}</version>
+            <version>1.1.3</version>
             <scope>compile</scope>
         </dependency>
         
@@ -32,7 +32,7 @@
         <dependency>
             <groupId>com.karuslabs</groupId>
             <artifactId>elementary</artifactId>
-            <version>${project.version}</version>
+            <version>1.1.3</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
