--- a/elementary/pom.xml
+++ b/elementary/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.karuslabs</groupId>
         <artifactId>elementary-project</artifactId>
-        <version>1.1.3</version>
+        <version>2.0.0-SNAPSHOT</version>
     </parent>
     
     <artifactId>elementary</artifactId>
