--- a/satisfactory/pom.xml
+++ b/satisfactory/pom.xml
@@ -4,11 +4,10 @@
     <parent>
         <groupId>com.karuslabs</groupId>
         <artifactId>elementary-project</artifactId>
-        <version>1.1.3</version>
+        <version>2.0.0-SNAPSHOT</version>
     </parent>
     
     <artifactId>satisfactory</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     
     <name>Satisfactory</name>
@@ -18,7 +17,7 @@
         <dependency>
             <groupId>com.karuslabs</groupId>
             <artifactId>utilitary</artifactId>
-            <version>1.1.3</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
         
@@ -32,7 +31,7 @@
         <dependency>
             <groupId>com.karuslabs</groupId>
             <artifactId>elementary</artifactId>
-            <version>1.1.3</version>
+            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
