--- a/utilitary-itest/pom.xml
+++ b/utilitary-itest/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>elementary-project</artifactId>
         <groupId>com.karuslabs</groupId>
-        <version>1.1.3</version>
+        <version>2.0.0-SNAPSHOT</version>
     </parent>
     <artifactId>utilitary-itest</artifactId>
     <packaging>jar</packaging>
@@ -21,6 +21,13 @@
         <dependency>
             <groupId>com.karuslabs</groupId>
             <artifactId>elementary</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        
+         <dependency>
+            <groupId>com.karuslabs</groupId>
+            <artifactId>utilitary</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
