--- a/elementary/pom.xml
+++ b/elementary/pom.xml
@@ -31,6 +31,12 @@
             <version>5.9.2</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>5.9.2</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     
 <build>
