--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,5 +21,5 @@ jobs:
         with:
           java-version: 17
           distribution: temurin
-      - run: mvn deploy site site-deploy --settings ci-settings.xml --no-transfer-progress
+      - run: ./mvnw deploy site site-deploy --settings ci-settings.xml --no-transfer-progress
       - run: bash <(curl -s https://codecov.io/bash)
