--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,5 +18,6 @@ jobs:
         with:
           java-version: 17
           distribution: temurin
+      - run: chmod +x ./mvnw
       - run: ./mvnw install --settings ci-settings.xml --no-transfer-progress
       - run: bash <(curl -s https://codecov.io/bash)
