--- a/utilitary-itest/pom.xml
+++ b/utilitary-itest/pom.xml
@@ -8,10 +8,37 @@
         <groupId>com.karuslabs</groupId>
         <version>2.0.0-SNAPSHOT</version>
     </parent>
+
     <artifactId>utilitary-itest</artifactId>
     <packaging>jar</packaging>
     <name>Utilitary Integration Tests</name>
     <description>Integration tests for Utilitary.</description>
+    <url>https://github.com/Pante/elementary</url>
+
+    <properties>
+        <maven.deploy.skip>true</maven.deploy.skip>
+    </properties>
+
+    <scm>
+        <connection>scm:git:git://github.com/pante/elementary.git</connection>
+        <developerConnection>scm:git:ssh://github.com/pante/elementary.git</developerConnection>
+        <url>https://github.com/Pante/elementary</url>
+    </scm>
+
+    <developers>
+        <developer>
+            <name>Matthias Ngeo</name>
+            <email>matthiasngeo@gmail.com</email>
+            <url>https://github.com/Pante</url>
+        </developer>
+    </developers>
+
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+        </license>
+    </licenses>
 
     <properties>
         <maven.compiler.release>11</maven.compiler.release>
