--- a/.github/workflows/deploy_self_hosted.yaml
+++ b/.github/workflows/deploy_self_hosted.yaml
@@ -1,4 +1,4 @@
-name: Deploy
+name: Deploy to Self-hosted Nexus Repository
 
 on:
   push:
@@ -10,7 +10,7 @@ env:
   SONATYPE_PASSWORD: ${{secrets.SONATYPE_PASSWORD}}
 
 jobs:
-  deploy:
+  deploy-self-hosted:
     runs-on: ubuntu-latest
     steps:
       - uses: styfle/cancel-workflow-action@0.11.0
