--- a/utilitary/pom.xml
+++ b/utilitary/pom.xml
@@ -10,6 +10,28 @@
     <packaging>jar</packaging>
     <name>Utilitary</name>
     <description>Utilitary contains classes to simplify annotation processing.</description>
+    <url>https://github.com/Pante/elementary</url>
+
+    <scm>
+        <connection>scm:git:git://github.com/pante/elementary.git</connection>
+        <developerConnection>scm:git:ssh://github.com/pante/elementary.git</developerConnection>
+        <url>https://github.com/Pante/elementary</url>
+    </scm>
+
+    <developers>
+        <developer>
+            <name>Matthias Ngeo</name>
+            <email>matthiasngeo@gmail.com</email>
+            <url>https://github.com/Pante</url>
+        </developer>
+    </developers>
+
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+        </license>
+    </licenses>
     
     <properties>
         <maven.compiler.release>11</maven.compiler.release>
