--- a/utilitary-itest/pom.xml
+++ b/utilitary-itest/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>elementary-project</artifactId>
         <groupId>com.karuslabs</groupId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>2.0.0</version>
     </parent>
 
     <artifactId>utilitary-itest</artifactId>
@@ -17,6 +17,7 @@
 
     <properties>
         <maven.deploy.skip>true</maven.deploy.skip>
+        <maven.compiler.release>11</maven.compiler.release>
     </properties>
 
     <scm>
@@ -39,11 +40,6 @@
             <url>http://www.opensource.org/licenses/mit-license.php</url>
         </license>
     </licenses>
-
-    <properties>
-        <maven.compiler.release>11</maven.compiler.release>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>com.karuslabs</groupId>
