--- a/.github/workflows/deploy_maven_central.yaml
+++ b/.github/workflows/deploy_maven_central.yaml
@@ -17,9 +17,9 @@ jobs:
       - name: Publish package
         env:
           JRELEASER_NEXUS2_USERNAME: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
-          JRELEASER_NEXUS2_PASSWORD: ${{ secrets.MAVEN_CENTRA_PASSWORD }}
+          JRELEASER_NEXUS2_PASSWORD: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
           JRELEASER_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
           JRELEASER_GPG_SECRET_KEY: ${{ secrets.GPG_SECRET_KEY }}
           JRELEASER_GPG_PUBLIC_KEY: ${{ secrets.GPG_PUBLIC_KEY }}
           JRELEASER_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: ./mvnw -Prelease deploy jreleaser:deploy -DaltDeploymentRepository=local::file:./target/staging-deploy
+        run: ./mvnw deploy jreleaser:deploy -DaltDeploymentRepository=local::file:./target/staging-deploy
