--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <name>Elementary Project</name>
     <description>Elementary is a collection of annotation processing libraries and tools</description>
     <url>https://github.com/Pante/elementary</url>
+    <inceptionYear>2021</inceptionYear>
 
     <scm>
         <connection>scm:git:git://github.com/pante/elementary.git</connection>
@@ -29,6 +30,7 @@
         <license>
             <name>MIT License</name>
             <url>https://www.opensource.org/licenses/mit-license.php</url>
+            <distribution>repo</distribution>
         </license>
     </licenses>
     
