--- a/satisfactory/pom.xml
+++ b/satisfactory/pom.xml
@@ -14,6 +14,7 @@
     <name>Satisfactory</name>
     <description>Satisfactory is an Element matching library for annotation processors.</description>
     <url>https://github.com/Pante/elementary</url>
+    <inceptionYear>2021</inceptionYear>
 
     <properties>
         <maven.deploy.skip>true</maven.deploy.skip>
@@ -37,6 +38,7 @@
         <license>
             <name>MIT License</name>
             <url>https://www.opensource.org/licenses/mit-license.php</url>
+            <distribution>repo</distribution>
         </license>
     </licenses>
     
