--- a/utilitary/pom.xml
+++ b/utilitary/pom.xml
@@ -11,6 +11,7 @@
     <name>Utilitary</name>
     <description>Utilitary contains classes to simplify annotation processing.</description>
     <url>https://github.com/Pante/elementary</url>
+    <inceptionYear>2021</inceptionYear>
 
     <scm>
         <connection>scm:git:git://github.com/pante/elementary.git</connection>
@@ -29,7 +30,8 @@
     <licenses>
         <license>
             <name>MIT License</name>
-            <url>http://www.opensource.org/licenses/mit-license.php</url>
+            <url>https://www.opensource.org/licenses/mit-license.php</url>
+            <distribution>repo</distribution>
         </license>
     </licenses>
     
