--- a/satisfactory/pom.xml
+++ b/satisfactory/pom.xml
@@ -17,6 +17,7 @@
 
     <properties>
         <maven.deploy.skip>true</maven.deploy.skip>
+        <maven.site.skip>true</maven.site.skip>
     </properties>
 
     <scm>
